--- a/函数参数.md
+++ b/函数参数.md
@@ -46,4 +46,9 @@ fn.length //4
 
 ​       e.函数的length属性不会计算rest参数
 
-​       
+5）变量生命周期
+局部变量的生命周期在函数执行完毕后就会结束（闭包除外）
+全局变量的生命周期在页面关闭后结束。
+6）垃圾回收
+   标记清除
+   引用计数（IE6,7,8内存泄漏）
