--- a/函数式编程.md
+++ b/函数式编程.md
@@ -303,5 +303,7 @@ Monad就是一种设计模式，表示将一个运算过程，通过函数拆解
 简单来说，函数式编程是一种强调以函数使用为主的软件开发风格。函数式编程的目的是使用函数来**抽象作用在数据之上的控制流和操作**，从而在系统中**消除副作用**并**减少对状态的改变。**
 
 compose 简单解释一下，他会让函数从最后一个参数顺序执行到第一个参数，compose 的每个参数都是函数，
+创建一个compose函数,返回函数集 functions 组合后的复合函数, 也就是一个函数执行完之后把返回的结果再作为参数赋给下一个函数来执行。
+compose内的函数执行顺序为从右向左，即最右边的函数（最后一个参数）最先执行，执行完的结果作为参数传递给前一个函数（包裹它的函数），一直到整个函数执行完毕，return一个函数，所以compose内部实现的原理类似多米诺骨牌，层层递进的。
 
 函数式编程属于声明式编程范式：这种范式会**描述一系列的操作**，但并不会**暴露它们是如何实现的**或是**数据流如何传过它们**。
