--- a/执行上下文.md
+++ b/执行上下文.md
@@ -10,27 +10,43 @@ debugger;执行到这行代码时，停止执行
 
 1.创建阶段
 
-​     （1）.创建变量对象
+​     （1）.创建变量对象(Variable Object)简称V0
 
-​            1).初始化arguments对象
+​            1).初始化arguments对象 它的值为Arguments对象
 
-​             2).查找当前上下文的形参 ——由 形参名称 和 对应值 组成，作为变量对象的属性。如果没有传递对应的参数，将undefined作为对应值。
+​					注意：只有执行上下文为函数环境的时候，才会初始化这个arguments对象
 
-​             3).查找当前上下文的函数声明function(){}——由 函数名 和 对应值（函数对象）组成，作为变量对象的属性。如果变量对象已经存在同名的属性，则覆盖这个属性
+​             2).查找当前上下文的形参 
 
-​             4).查找当前上下文的变量声明var——由 变量名 和 对应值（undefined） 组成，作为变量对象的属性。如果变量名与已经声明的形参或函数相同，则变量声明不会干扰已经存在的这类属性。注意：此时的对应值是undefined。
+​                    a.找所有的形参并在变量对象里创建一条key:value
+
+​                    b.key为形参的名字，value为对应实参的值。如果没有实参value为undefined
+
+​             3).查找当前上下文的函数声明function(){}
+
+​                    a.找function声明的函数并在变量对象里创建一条key:value
+
+​                    b.key为function后的名字，value为函数在内存里的地址
+
+​                    c.如果有同名的key,后面会把前面的覆盖
+
+​             4).查找当前上下文的变量声明（var）
+
+​                    a.找var声明的变量并在变量对象里创建一条key:value
+
+​                    b.key为变量名，value为undefined
+
+​                    c.如果key已经存在，直接跳过（为了防止这个key为函数，那函数会被修改为undefined）
+
+注意：这里为什么不去查不用var声明的变量呢，不用var声明的变量严格来讲不叫变量，而是全局对象身上的属性
 
 ​       （2）.建立作用域链
 
 ​        （3）.确定this指向
 
-2.代码执行阶段（变量对象要变成活动对象
+2.代码执行阶段（变量对象要变成活动对象）
 
-​     1）变量赋值
-
-​     2）函数引用
-
-​     3）执行其他代码
+​     1）变量赋值（找=）
 
 ##### 全局环境：
 
@@ -44,7 +60,7 @@ debugger;执行到这行代码时，停止执行
 
 2.执行阶段
 
-​    1）变量赋值
+​    1）变量赋值(找=)
 
 
 
@@ -111,3 +127,23 @@ console.log(a)// ReferenceError:a is not defined
 console.log(b)// ReferenceError:b is not defined
 
 console.log(c)// ReferenceError:c is not defined
+
+
+
+##### 函数表达式、函数声明、变量重名
+
+1.在定义后面使用，取变量的值，哪个变量靠后取哪个变量的值。如果变量没有值，会选择有值的变量，都没有才选择函数。
+
+2.在定义前面使用，始终取函数声明的值。
+
+console.log(k)//undefined
+var k = 'aa';
+var k;
+console.log(k)//a
+
+a(); // f a(){console.log(a)}
+var a = 10;
+function a(){
+    console.log(a);
+}
+a();//TypeError:a is not a function 此时 a= 10 ,相当于 10()
