--- a/协议及页面渲染.md
+++ b/协议及页面渲染.md
@@ -134,3 +134,22 @@ PS：DNS 是基于 UDP 做的查询，大家也可以考虑下为什么之前不
 CSSOM 树和 DOM 树构建完成后会开始生成 Render 树，这一步就是确定页面元素的布局、样式等等诸多方面的东西
 
 在生成 Render 树的过程中，浏览器就开始调用 GPU 绘制，合成图层，将内容显示在屏幕上了。
+
+##### 什么是HTTPS?
+
+HTTPS = HTTP + SSL/TLS ，是HTTP协议的安全版。
+
+##### SSL/TLS又是什么？
+
+SSL的全称是Secure Sockets Layer，即安全套接层协议，是为网络通信提供安全及数据完整性的一种安全协议。SSL最新放入版本是3.0。
+
+TLS的全称是Transport Layer Security，即安全传输层协议，是建立在SSL 3.0协议规范之上，是SSL 3.0的后续版本。
+
+##### 为什么要用HTTPS？
+
+因为HTTP在“裸奔”（明文传输，不安全）
+
+##### HTTPS的作用
+
+- 对数据进行加密，并建立一个信息安全通道，来保证传输过程中的数据安全
+- 对网站服务器进行真实身份认证
