--- a/排序.md
+++ b/排序.md
@@ -49,3 +49,21 @@ function fib(n) {
   return array;
 }
 fib(10);
+
+##### 冒泡排序
+
+遍历n次，每次循环相邻元素两辆比较，把其中大的元素往后放。
+
+##### 选择排序
+
+遍历自身以后的元素，最小的元素跟自己调换位置
+
+##### 插入排序
+
+所谓插入，实指把待排序元素插入到已排好的序列里。
+
+##### 归并排序
+
+归并二字就是递归加合并。它是典型的分而治之算法。
+
+
