--- a/模块化.md
+++ b/模块化.md
@@ -161,6 +161,18 @@ ES Module 是原生实现的模块化方案，与 CommonJS 有以下几个区别
    export function a() {}
 
    export default function() {}
+   
+##### 模块化
 
+模块化开发在现代开发中已是必不可少的一部分，它大大提高了项目的可维护、可扩展和可写作性。通常，我们在浏览器中使用ES6的模块化支持，在Node中使用commonjs的模块化支持。
+
+- 分类
+  - es6: import/export
+  - commonjs: require / module.exports / exports
+  - amd: require / defined
+- require与import的区别
+  - require支持动态导入，import不支持，
+  - require 是同步导入，import 属于异步导入
+  - require 是值拷贝，导出至变化不会影响导入值；import指向内存地址，导入值会随导出值而变化
    
 
