--- a/易错点.md
+++ b/易错点.md
@@ -400,3 +400,60 @@ GC(Garbage Collection)垃圾回收
 ES5的继承，实质是先创造子类的实例对象this，然后再将父类的方法添加到this上面Parent.apply(this)
 
 ES6的继承则是，将父类实例对象的属性和方法，加到this上面（所以必须先调用super()）,然后在用子类的构造函数修改this。内部的this指向的是child。
+##### 代码的复用
+
+当你发现任何代码开始写第二遍时，就要开始考虑如何复用。一般有以下的方式：
+
+- 函数封装
+- 继承
+- 复制 extend
+- 混入 mixin
+- 借用 apply/call
+
+##### 类型转换
+
+大家都知道JS中在使用运算符号或者对比符时，会自带隐式转换，规则如下：
+
+- -、*、/、%：一律转换成数值后计算
+- +：
+  - 数字 + 字符串 = 字符串，运算顺利是从左到右
+  - 数字 + 对象，优先调用对象的valueOf  ->  toString
+  - 数字 + boolean/null   ->  数字
+  - 数字 + undefined   ->   NaN
+- [1].toString() === '1'
+- {}.toString() === '[object object]'
+- NaN !== NaN 
+- +undefined 为NaN
+
+##### 防抖与节流
+
+防抖（debounce）:将多次高频操作优化为只在最后一次执行，通常使用的场景：用户输入，只需再输入完成后做一次输入校验即可。
+
+节流（throttle）:每隔一段时间后执行一次，也就是降低频率，将高频操作优化成低频操作，通常使用场景：滚动条事件或者resize事件，通常每隔100~500ms执行一次即可。
+
+##### AST
+
+抽象语法树（Abstract Syntax Tree），是将代码逐字母解析成树状对象的形式。这是语言之间的转换、代码语法检查、代码风格检查、代码格式化、代码高亮、代码错误提示、代码自动补全等等的基础。
+
+##### babel编译原理
+
+- babylon将ES6/ES7代码解析成AST
+- babel-traverse对AST进行遍历转译，得到新的AST
+- 新AST通过babel-generator转换成ES5
+
+##### 重绘与回流
+
+重绘（repaint）：当元素样式的改变不影响布局时，浏览器将使用重绘对元素进行更新，此时由于只需要UI层面的重新像素绘制，因此损耗较少
+
+回流（reflow）：当元素的尺寸、结构或触发某些属性时，浏览器会重新渲染页面，称为回流。此时，浏览器需要重新经过计算，计算后还需要重新页面布局，因此是较重的操作。会触发回流的操作：
+
+- 页面初次渲染
+- 浏览器窗口大小改变
+- 元素尺寸、位置、内容发生改变
+- 元素字体大小变化
+- 添加或删除可见的dom元素
+- 激活CSS伪类（例如 ：hover）
+- 查询某些属性或调用某些方法
+
+回流必定触发重绘，重绘不一定触发回流。重绘的开销较小，回流的代价较高。
+
