--- a/字符串方法.md
+++ b/字符串方法.md
@@ -20,3 +20,63 @@
 18. repeat() 构造并返回一个新字符串，该字符串包含被连接在一起的指定数量的字符串的副本。
 19. valueOf() 返回一个String对象的原始值(primitive value)，该值等同于String.prototype.toString()
 20. trim() 会从一个字符串的两端删除空白字符。在这个上下文中的空白字符是所有的空白字符（space、tab、no-break space等）以及所有行终止符字符（如LF 、CR）
+ substr: ƒ substr(), // 避免使用，后期可能被移除
+
+##### 字符串 - 查询
+
+str.length  返回了字符串的长度
+
+str.charAt(index) 返回特定位置的字符
+
+str.charCodeAt(index)返回表示给定索引的字符的Unicode的值
+
+str.includes(searchString, fromIndex)判断一个字符串里是否包含其他字符串
+
+str.indexOf(searchString, fromInedx)从字符串对象中返回首个被发现的给定值的索引值，如果没有找到则返回-1
+
+str.lastIndexOf(searchString, fromIndex)从字符串对象中返回最后一个被发现的给定值的索引值，如果没有找到则返回-1
+
+str.subString(indexStart, indexEnd)返回在字符串中指定两个下标之间的字符
+
+##### 字符串 - 正则表达式
+
+str.match(regex) 使用正则表达式与字符串相比较
+
+str.matchAll(regex)返回一个包含所有匹配正则表达式及分组捕获结果的迭代器。
+
+str.replace(regex|substr, newSubStr|function)被用来在正则表达式和字符串直接比较，然后用新的子串来替换被匹配的子串。
+
+str.search(regex)对正则表达式和指定字符串进行匹配搜索，返回第一个出现的匹配项的下标。
+
+##### 字符串 - 修改
+
+str.concat(string2, strig3,..., stringN) 连接两个字符串文本，并返回一个新的字符串
+
+str.padStart(targetLength, padString) 在当前字符串头部填充指定的字符串，直到达到指定的长度。返回一个新的字符串
+
+str.padEnd(targetLength, padString)在当前字符串尾部填充指定的字符串，直到达到指定的长度。返回一个新的字符串
+
+str.repeat(count) 返回指定重复次数的由元素组成的字符串对象
+
+str.slice(beginIndex, endIndex) 摘取一个字符串区域，返回一个新的字符串
+
+##### 字符串 - 转类型
+
+str.split(separator, limit) （字符串转数组）通过分离字符串成子串，将字符串对象分割成字符串数组。
+
+type.toString() （其他类型转字符串）返回用字符串表示的特定对象
+
+##### 字符串 - 大小写
+
+str.toLocaleLowerCase() / str.toLowerCase()  根据当前区域设置，将字符串中的字符转换成小写。对于大多数语言来书，toLowerCase的返回值是一致的。
+
+str.toLocaleUpperCase() / str.toUpperCase() 根据当前区域设置，将字符串中的字符转换成大写。对于大多数语言来说，toUpperCase的返回值是一致的。
+
+##### 字符串 - 去空格
+
+str.trim() 从字符串的开始和结尾去除空格
+
+str.trimStart() / str.trimLeft() 从字符串的左侧去除空格
+
+str.trimEnd() / str.trimRight() 从字符串的右侧去除空格
+
