--- a/赋值、深拷贝和浅拷贝的区别.md
+++ b/赋值、深拷贝和浅拷贝的区别.md
@@ -23,7 +23,7 @@
 
 1.Object.assign()
 
-Object.assign()把所有可枚举属性从一个或多个对象复制到目标对象，返回目标对象。
+Object.assign()把所有可枚举属性从一个或多个对象复制到目标对象，返回目标对象。 只对当前对象是拷贝，对于对象里的对象就不是了。
 
 ```
 var a = {
