--- a/基础知识.md
+++ b/基础知识.md
@@ -826,7 +826,7 @@ Object.keys(SuperType.prototype);
 
 5、箭头函数没有原型属性
 
-6、箭头函数不能作为Generator函数，不能使用yield关键字
+6、箭头函数不能作为Generator函数，不能使用yield关键字。 函数体多条语句需要用到大括号
 
 **7****、箭头函数若要返回自定义对象的话，就必须用小括号把该对象括起来先**
 
