--- a/字符串方法.md
+++ b/字符串方法.md
@@ -80,3 +80,38 @@ str.trimStart() / str.trimLeft() 从字符串的左侧去除空格
 
 str.trimEnd() / str.trimRight() 从字符串的右侧去除空格
 
+![img](https://user-gold-cdn.xitu.io/2020/7/6/173224cb21168f3e?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
+
+| 字符串方法          | 说明                                                 |
+| ------------------- | ---------------------------------------------------- |
+| charAt()            | 返回在指定位置的字符。                               |
+| charCodeAt()        | 返回在指定的位置的字符的Unicode编码。                |
+| concat()            | 连接字符串。                                         |
+| indexOf()           | 检索字符串。                                         |
+| match()             | 找到一个或多个正则表达式的匹配。                     |
+| replace()           | 替换与正则表达式匹配的子串。                         |
+| search()            | 检索与正则表达式相匹配的值。                         |
+| slice()             | 提取字符串的片断，并在新的字符串中返回被提取的部分。 |
+| split()             | 把字符串分割为字符串数组。                           |
+| toLocaleLowerCase() | 把字符串转换为小写。                                 |
+| toLocaleUpperCase() | 把字符串转换为大写。                                 |
+| toLowerCase()       | 把字符串转换为小写。                                 |
+| toUpperCase()       | 把字符串转换为大写。                                 |
+| substr()            | 从起始索引号提取字符串中指定数目的字符。             |
+| substring()         | 提取字符串中两个指定的索引号之间的字符。             |
+
+###### 1.查找数组元素位置
+
+```
+arr.indexOf(searchElement) //查找searchElement元素在数组中的第一个位置
+arr.indexOf(searchElement[, fromIndex=0]) //从fromIndex开始查找searchElement元素在数组中的第一个位置
+```
+
+还有另外一个查找字符串的方法，String.prototype.indexOf()
+
+```
+str,indexOf(searchValue[, fromIndex])
+```
+
+- searchValue: 一个字符串表示被查找的值
+- fromIndex(可选)：表示调用该方法的字符串中开始查找的位置。乐意是任意整数。默认值为0。如果fromIndex < 0则查找整个字符串（如同传进了0）。如果fromIndex >= str.length,则方法返回-1，除非被查找的字符串是一个空字符串，此时返回str.length。
